# H.A.Z.A.R.D

./: .gitignore  .ignore  Cargo.toml  README.md  game.plan  recipe.plan
helixer/: config.toml
helixer/.helix/: config.toml
src/: main.rs  mod.rs
src/base/: logging.rs  mod.rs  proc.rs  protocols.rs
src/order/: mod.rs
src/order/pallet/: home.rs
src/zellijuice/: mod.rs
src/zellijuice/config/: default.kdl
src/zellijuice/layouts/: default_layout.kdl
