[package]
name = "hazards"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hazards"
path = "src/main.rs"

[dependencies]
async-tungstenite = "0.21.0"
console_engine = {features = ["form", "event"], version = "2.6.0"}
crossterm = "0.26.1"
futures = "0.3.28"
kanal = "0.1.0-pre8"
rhai = "1.13.0"
surrealdb = { version = "1.0.0-beta.9", features = ["kv-mem", "scripting", "http", "protocol-http"] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1.12"
tokio-util = { version = "0.7.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }

