[package]
name = "hazards"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hazards"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
async-tungstenite = "0.21.0"
bitvec = {features = ["alloc"], version = "1.0.1"}
byteorder = "1.4.3"
console_engine = {features = ["form", "event"], version = "2.6.0"}
cookie-factory = "0.3.2"
crossterm = "0.26.1"
futures = "0.3.28"
hashbrown = "0.13.2"
kanal = "0.1.0-pre8"
log = "0.4.17"
nom = "7.1.3"
paste = "1.0.12"
rhai = "1.13.0"
surrealdb = { version = "1.0.0-beta.9", features = ["kv-mem", "scripting", "http", "protocol-http"] }
tokio = { version = "1.27.0", features = ["full", "tracing", "stats", "test-util"] }
tokio-stream = "0.1.12"
tokio-util = { version = "0.7.7", features = ["codec"] }
tracing = "0.1"
tracing-futures = { version = "0.2.5", features = ["tokio"] }
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log", "time"] }
tungstenite = { version = "0.19.0", features = ["rustls"] }
ux = "0.1.5"

[build]
rustflags = ["--cfg", "tokio_unstable"]
